objects/UPC_Quote_Renaming_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Options available on renaming old quotes batch</description>
    <fields>
        <fullName>UPC_Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Number of documents to update in single batch step</description>
        <inlineHelpText>Number of documents to update in single batch step</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Obsolete_Quote_After__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days buffered before the Quote becomes obsolete and be renamed</description>
        <inlineHelpText>Starting from today this is the number of days buffered before the Quote becomes obsolete and be renamed</inlineHelpText>
        <label>Obsolete Quote After</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_OnError_Email__c</fullName>
        <description>Email of the Admin responsible to look at errors thrown during Quote Renaming batch</description>
        <inlineHelpText>Email of Administrator that will be responsible to look at errors thrown during Quote Renaming batch processing</inlineHelpText>
        <label>On Error Send Email To</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UPC_Quote_Clerk_User_Id__c</fullName>
        <description>User Id under which QuoteRenamer process is run.</description>
        <inlineHelpText>User Id under which QuoteRenamer process is run.</inlineHelpText>
        <label>Quote Clerk User Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Renamed_Quote_Prefix__c</fullName>
        <description>The string that holds the prefix to the old Quote to be Renamed.</description>
        <inlineHelpText>Text to be prepended to the old Quote title during the renaming batch.</inlineHelpText>
        <label>Renamed Quote Prefix</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Quote Renaming Options</label>
</CustomObject>